--- a/Save/Web.config
+++ b/Save/Web.config
@@ -176,9 +176,9 @@
     <add key="PromoRightImage" value="/Images/catering.png" />
     <add key="PromoRightUrl" value="https://raydar.app-hosting.co.nz/catering/" /> -->
 	
-	<add key="HomepageLeftPromoTitle" value="Happy Hour" />
-    <add key="HomepageLeftPromoSummary" value="Buy heaps of great Pizzas from Pizza Hut" />
-    <add key="HomepageLeftPromoUrl" value="/order/deals/pickup" />
+	<add key="HomepageLeftPromoTitle" value="DELIVERY HOURS" />
+    <add key="HomepageLeftPromoSummary" value="Click here to check our delivery hours" />
+    <add key="HomepageLeftPromoUrl" value="/order/deals/delivery" />
     <add key="HomepageLeftPromoImage" value="/Images/happy-hour.png" />
 
     <add key="HomepageRightPromoTitle" value="Need Catering" />
