changes in style, tabs etc...

--- a/Save/Web.config
+++ b/Save/Web.config
@@ -178,12 +178,12 @@
 	
 	<add key="HomepageLeftPromoTitle" value="DELIVERY HOURS" />
     <add key="HomepageLeftPromoSummary" value="Click here to check our delivery hours" />
-    <add key="HomepageLeftPromoUrl" value="/order/deals/delivery" />
+    <add key="HomepageLeftPromoUrl" value="/order/deliverArea/delivery" />
     <add key="HomepageLeftPromoImage" value="/Images/happy-hour.png" />
 
     <add key="HomepageRightPromoTitle" value="Need Catering" />
     <add key="HomepageRightPromoSummary" value="Need Catering - go here and order many things" />
-    <add key="HomepageRightPromoUrl" value="https://raydar.app-hosting.co.nz/catering/" />
+    <add key="HomepageRightPromoUrl" value="https://gem.desk.com/?b_id=13883" />
     <add key="HomepageRightPromoImage" value="/Images/catering.png" />
 	
      <!-- Stores homepage deal details -->
